--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,11 @@ cmake_minimum_required(VERSION 3.15)
 
 project(tinyrenderer)
 
-add_subdirectory(external)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/parser)
 
-set(CMAKE_CXX_FLAGS "-O3")
+
 add_executable(tinyrenderer main.cpp)
-
-target_link_libraries(tinyrenderer PRIVATE tgaimage)
+target_compile_options(tinyrenderer PRIVATE -O3)
+target_link_options(tinyrenderer PRIVATE -O3)
+target_link_libraries(tinyrenderer PRIVATE tgaimage parser)
